# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240515091735_add_status_to_subscriptions.sql  20240515095106_make_status_not_null_in_subscriptions.sql  20240605125644_seed_user.sql.sql  20240606082516_create_newsletter_issues_table.sql.sql  20240606082609_create_issue_delivery_queue_table.sql.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: email.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: post.rs
src/routes/login/: post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
